# L-WISE

./: .gitignore  LICENSE  README.md  requirements.txt
docs/: index.html
imgproc_code/lwise_imgproc_utils/: pyproject.toml
imgproc_code/lwise_imgproc_utils/lwise_imgproc_utils/: __init__.py  custom_losses.py  gif_utils.py  mapped_models.py
psych_code/: pyproject.toml
psych_code/experiment_files/example_custom_experiment_0/: config_FJ_keypress_response.yaml  example_custom_experiment_0.html  imagenet_config.yaml  imagenet_trialsets.csv  trialsets.csv
psych_code/experiment_files/ham4_learn_10/: config.yaml  dataset_dirmap.csv  ham4_learn_10.html
psych_code/experiment_files/ham4_learn_pilot_0/: config.yaml  ham4_learn_pilot_0.html
psych_code/experiment_files/idaea4_learn_10/: config.yaml  dataset_dirmap.csv  idaea4_learn_10.html
psych_code/experiment_files/imagenet_animals_guide_models_10/: config.yaml  (+1 more)
psych_code/jspsych_plugins/: custom_mturk_jspsych_plugin_browser_check.js  jspsych-my-virtual-chinrest.js  jspsych-psychophysics.js  jspsych-window-size-check.js
psych_code/lwise_psych_modules/: __init__.py  assign_quals_lambda.py  create_dynamodb_tables.py  deploy_session_metadata_lambda_function.py  generate_prespecified_trials.py  generate_trials.py  generate_trials_helpers.py  process_session_data.py  session_metadata_lambda.py  utils.py
psych_code/scripts/: delete_buckets.py  delete_duplicate_api_gateways.py  deploy_experiment.py  deployed_experiment_teardown.py  dropout_statistics.py  find_bonus_eligible.py  get_experiment_data.py  replace_in_file.py
(+108 files in other folders)
